// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`anything query fetches Author 1`] = `
Object {
  "anything": Object {
    "__typename": "Author",
    "books": Array [
      Object {
        "description": "Laborum cupiditate consequatur et voluptatem.",
        "favourite": true,
        "id": "Mi1Cb29r",
        "title": "Et",
      },
      Object {
        "description": "Aut consequatur incidunt blanditiis sunt.",
        "favourite": true,
        "id": "My1Cb29r",
        "title": "In Eos Quae",
      },
      Object {
        "description": "Voluptatem inventore ut quisquam fugiat itaque non alias.",
        "favourite": true,
        "id": "MS1Cb29r",
        "title": "Suscipit Animi Qui Impedit",
      },
    ],
    "id": "MS1BdXRob3I=",
    "name": "Lorene Deckow",
  },
}
`;

exports[`anything query fetches Book 1`] = `
Object {
  "anything": Object {
    "__typename": "Book",
    "description": "Voluptatem inventore ut quisquam fugiat itaque non alias.",
    "favourite": true,
    "id": "MS1Cb29r",
    "title": "Suscipit Animi Qui Impedit",
  },
}
`;

exports[`fetches with aliases 1`] = `
Object {
  "author": Object {
    "description": "Et voluptatem nostrum.",
    "headline": "Suzanne Moore IV",
    "id": "Mi1BdXRob3I=",
  },
  "something": Object {
    "description": "Voluptatem inventore ut quisquam fugiat itaque non alias.",
    "externalId": "MS1Cb29r",
    "headline": "Suscipit Animi Qui Impedit",
    "id": "MS1Cb29r",
  },
  "user": Object {
    "description": "Sint voluptatibus deserunt totam quae eos.",
    "headline": "Micheal Wiza III",
    "id": "MS1Vc2Vy",
  },
}
`;
